<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.moro.smartShulkerInfo</groupId>
    <artifactId>SmartShulkerInfo</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>SmartShulkerInfo</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>post-package-execution</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>cmd</executable>
                            <arguments>
                                <argument>/c</argument>
                                <argument>if</argument>
                                <argument>exist</argument>
                                <argument>C:\Users\Simone\Desktop\ServerTest\plugins</argument>
                                <argument>(</argument>
                                <argument>xcopy</argument>
                                <argument>/y</argument>
                                <argument>C:\Plugins\SmartShulkerInfo\target\${project.name}-${project.version}.jar
                                </argument>
                                <argument>C:\Users\Simone\Desktop\ServerTest\plugins</argument>
                                <argument>)</argument>
                                <argument>else</argument>
                                <argument>(</argument>
                                <argument>xcopy</argument>
                                <argument>/y</argument>
                                <argument>C:\Plugins\SmartShulkerInfo\target\${project.name}-${project.version}.jar
                                </argument>
                                <argument>C:\Users\ale20\Desktop\prova\plugins</argument>
                                <argument>)</argument>
                            </arguments>
                            <!--<executable>C:\Users\Simone\Desktop\sposta.bat</executable> -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
